@@ -4,6 +4,7 @@ CVS -
   * Stephen Blackheath: ./configure support for building Abyss
     with pthreads.
   * Jeff Dubrule: Removed C++ comments from expat.
+  * Patrick Boykin: Support for copying xmlrpc_server_info structs.
 
 0.9.10 - Eric Kidd <eric.kidd@pobox.com> - 30 June 2001
 
